--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ authors = [ "{{authors}}" ]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
 default = []
-no-std =[]
-
+std =[]
 
 [dependencies]
